--- a/restaurante.html
+++ b/restaurante.html
@@ -87,7 +87,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Pizzaria capitão ganho</h3>
+												<h3>Pizzaria capitão gacho</h3>
 											</header>
 											<p>Com espaço temático de pirata, a pizzaria oferece rodízio e pizzas à la carte.
 												Recentemente eles incluíram no preço do rodízio refrigerantes e sucos. 
